rocksdb/rocksdb/lib/librocksdb.nim


proc rocksdb_property_int_cf*(db: ptr rocksdb_t;
                             column_family: ptr rocksdb_column_family_handle_t;
                             propname: cstring; out_val: ptr uint64): cint {.cdecl,
    importc: "rocksdb_property_int_cf", dynlib: librocksdb.}
proc rocksdb_property_value_cf*(db: ptr rocksdb_t; column_family: ptr rocksdb_column_family_handle_t;
                               propname: cstring): cstring {.cdecl,
    importc: "rocksdb_property_value_cf", dynlib: librocksdb.}
proc rocksdb_approximate_sizes*(db: ptr rocksdb_t; num_ranges: cint;
                               range_start_key: cstringArray;
                               range_start_key_len: ptr csize_t;
                               range_limit_key: cstringArray;
                               range_limit_key_len: ptr csize_t; sizes: ptr uint64;
                               errptr: cstringArray) {.cdecl,
    importc: "rocksdb_approximate_sizes", dynlib: librocksdb.}
proc rocksdb_approximate_sizes_cf*(db: ptr rocksdb_t; column_family: ptr rocksdb_column_family_handle_t;
                                  num_ranges: cint; range_start_key: cstringArray;
                                  range_start_key_len: ptr csize_t;
                                  range_limit_key: cstringArray;
                                  range_limit_key_len: ptr csize_t;
                                  sizes: ptr uint64; errptr: cstringArray) {.cdecl,
    importc: "rocksdb_approximate_sizes_cf", dynlib: librocksdb.}
proc rocksdb_compact_range*(db: ptr rocksdb_t; start_key: cstring;
                           start_key_len: csize_t; limit_key: cstring;
                           limit_key_len: csize_t) {.cdecl,
    importc: "rocksdb_compact_range", dynlib: librocksdb.}
proc rocksdb_compact_range_cf*(db: ptr rocksdb_t; column_family: ptr rocksdb_column_family_handle_t;
                              start_key: cstring; start_key_len: csize_t;
                              limit_key: cstring; limit_key_len: csize_t) {.cdecl,
    importc: "rocksdb_compact_range_cf", dynlib: librocksdb.}
proc rocksdb_suggest_compact_range*(db: ptr rocksdb_t; start_key: cstring;
                                   start_key_len: csize_t; limit_key: cstring;
                                   limit_key_len: csize_t; errptr: cstringArray) {.
    cdecl, importc: "rocksdb_suggest_compact_range", dynlib: librocksdb.}
proc rocksdb_suggest_compact_range_cf*(db: ptr rocksdb_t; column_family: ptr rocksdb_column_family_handle_t;
                                      start_key: cstring; start_key_len: csize_t;
                                      limit_key: cstring; limit_key_len: csize_t;
                                      errptr: cstringArray) {.cdecl,
    importc: "rocksdb_suggest_compact_range_cf", dynlib: librocksdb.}
proc rocksdb_compact_range_opt*(db: ptr rocksdb_t;
                               opt: ptr rocksdb_compactoptions_t;
                               start_key: cstring; start_key_len: csize_t;
                               limit_key: cstring; limit_key_len: csize_t) {.cdecl,
    importc: "rocksdb_compact_range_opt", dynlib: librocksdb.}
proc rocksdb_compact_range_cf_opt*(db: ptr rocksdb_t; column_family: ptr rocksdb_column_family_handle_t;
                                  opt: ptr rocksdb_compactoptions_t;
                                  start_key: cstring; start_key_len: csize_t;
                                  limit_key: cstring; limit_key_len: csize_t) {.
    cdecl, importc: "rocksdb_compact_range_cf_opt", dynlib: librocksdb.}
proc rocksdb_delete_file*(db: ptr rocksdb_t; name: cstring) {.cdecl,
    importc: "rocksdb_delete_file", dynlib: librocksdb.}
proc rocksdb_livefiles*(db: ptr rocksdb_t): ptr rocksdb_livefiles_t {.cdecl,
    importc: "rocksdb_livefiles", dynlib: librocksdb.}
proc rocksdb_flush*(db: ptr rocksdb_t; options: ptr rocksdb_flushoptions_t;
                   errptr: cstringArray) {.cdecl, importc: "rocksdb_flush",
    dynlib: librocksdb.}
proc rocksdb_flush_cf*(db: ptr rocksdb_t; options: ptr rocksdb_flushoptions_t;
                      column_family: ptr rocksdb_column_family_handle_t;
                      errptr: cstringArray) {.cdecl, importc: "rocksdb_flush_cf",
    dynlib: librocksdb.}
proc rocksdb_flush_cfs*(db: ptr rocksdb_t; options: ptr rocksdb_flushoptions_t;
                       column_family: ptr ptr rocksdb_column_family_handle_t;
                       num_column_families: cint; errptr: cstringArray) {.cdecl,
    importc: "rocksdb_flush_cfs", dynlib: librocksdb.}
proc rocksdb_flush_wal*(db: ptr rocksdb_t; sync: uint8; errptr: cstringArray) {.cdecl,
    importc: "rocksdb_flush_wal", dynlib: librocksdb.}
proc rocksdb_disable_file_deletions*(db: ptr rocksdb_t; errptr: cstringArray) {.cdecl,
    importc: "rocksdb_disable_file_deletions", dynlib: librocksdb.}
proc rocksdb_enable_file_deletions*(db: ptr rocksdb_t; force: uint8;
                                   errptr: cstringArray) {.cdecl,
    importc: "rocksdb_enable_file_deletions", dynlib: librocksdb.}
##  Management operations

proc rocksdb_destroy_db*(options: ptr rocksdb_options_t; name: cstring;
                        errptr: cstringArray) {.cdecl,
    importc: "rocksdb_destroy_db", dynlib: librocksdb.}
proc rocksdb_repair_db*(options: ptr rocksdb_options_t; name: cstring;
                       errptr: cstringArray) {.cdecl, importc: "rocksdb_repair_db",
    dynlib: librocksdb.}
##  Iterator

proc rocksdb_iter_destroy*(a1: ptr rocksdb_iterator_t) {.cdecl,
    importc: "rocksdb_iter_destroy", dynlib: librocksdb.}
proc rocksdb_iter_valid*(a1: ptr rocksdb_iterator_t): uint8 {.cdecl,
    importc: "rocksdb_iter_valid", dynlib: librocksdb.}
proc rocksdb_iter_seek_to_first*(a1: ptr rocksdb_iterator_t) {.cdecl,
    importc: "rocksdb_iter_seek_to_first", dynlib: librocksdb.}
proc rocksdb_iter_seek_to_last*(a1: ptr rocksdb_iterator_t) {.cdecl,
    importc: "rocksdb_iter_seek_to_last", dynlib: librocksdb.}
proc rocksdb_iter_seek*(a1: ptr rocksdb_iterator_t; k: cstring; klen: csize_t) {.cdecl,
    importc: "rocksdb_iter_seek", dynlib: librocksdb.}
proc rocksdb_iter_seek_for_prev*(a1: ptr rocksdb_iterator_t; k: cstring; klen: csize_t) {.
    cdecl, importc: "rocksdb_iter_seek_for_prev", dynlib: librocksdb.}
proc rocksdb_iter_next*(a1: ptr rocksdb_iterator_t) {.cdecl,
    importc: "rocksdb_iter_next", dynlib: librocksdb.}
proc rocksdb_iter_prev*(a1: ptr rocksdb_iterator_t) {.cdecl,
    importc: "rocksdb_iter_prev", dynlib: librocksdb.}
proc rocksdb_iter_key*(a1: ptr rocksdb_iterator_t; klen: ptr csize_t): cstring {.cdecl,
    importc: "rocksdb_iter_key", dynlib: librocksdb.}
proc rocksdb_iter_value*(a1: ptr rocksdb_iterator_t; vlen: ptr csize_t): cstring {.
    cdecl, importc: "rocksdb_iter_value", dynlib: librocksdb.}
proc rocksdb_iter_timestamp*(a1: ptr rocksdb_iterator_t; tslen: ptr csize_t): cstring {.
    cdecl, importc: "rocksdb_iter_timestamp", dynlib: librocksdb.}
proc rocksdb_iter_get_error*(a1: ptr rocksdb_iterator_t; errptr: cstringArray) {.
    cdecl, importc: "rocksdb_iter_get_error", dynlib: librocksdb.}
proc rocksdb_wal_iter_next*(iter: ptr rocksdb_wal_iterator_t) {.cdecl,
    importc: "rocksdb_wal_iter_next", dynlib: librocksdb.}
proc rocksdb_wal_iter_valid*(a1: ptr rocksdb_wal_iterator_t): uint8 {.cdecl,
    importc: "rocksdb_wal_iter_valid", dynlib: librocksdb.}
proc rocksdb_wal_iter_status*(iter: ptr rocksdb_wal_iterator_t; errptr: cstringArray) {.
    cdecl, importc: "rocksdb_wal_iter_status", dynlib: librocksdb.}
proc rocksdb_wal_iter_get_batch*(iter: ptr rocksdb_wal_iterator_t; seq: ptr uint64): ptr rocksdb_writebatch_t {.
    cdecl, importc: "rocksdb_wal_iter_get_batch", dynlib: librocksdb.}
proc rocksdb_get_latest_sequence_number*(db: ptr rocksdb_t): uint64 {.cdecl,
    importc: "rocksdb_get_latest_sequence_number", dynlib: librocksdb.}
proc rocksdb_wal_iter_destroy*(iter: ptr rocksdb_wal_iterator_t) {.cdecl,
    importc: "rocksdb_wal_iter_destroy", dynlib: librocksdb.}
##  Write batch
